# perf-task

./: .clang-format  CMakeLists.txt  README.md  init-repo.sh
.github/workflows/: cpp.yml
ci-extra/: build.sh  check.py  test.sh
ci-extra/perf/: bench_jpeg.cpp  bench_json.cpp  bench_logger.cpp  bench_pi.cpp  bench_radix_sort.cpp  json.cpp
perf/: CMakeLists.txt  bench_jpeg.cpp  bench_json.cpp  bench_logger.cpp  bench_pi.cpp  bench_radix_sort.cpp  jpeg.cpp  json.cpp
